# TranslationsService

./: .gitignore  authorize.py  config.json  main.py  pyproject.toml
tests/: test_translations_service.py
